1.0 "Asieoniezi"

0.125 "Potzrebie"
 408767 connection-limit change not recognized until restart (Chuck)
 408778 0.124 bug: signature "command" executed twice (Jack Cuyler)
 408866 0.124 bug: error with the signature delimiter (Mimi Doucet)
 408990 0.124 bug: no more line break at 80 characters (longint)

0.124 "Goblin Worlds"
 370195 0.123 mime decoding errors (Walt)
 404833 marking a group as read doesn't stick between sessions (Frank Tabor)
 406284 array bounds read in StringView::strchr (Bruno Barberi Gnecco)
 403762 pasted text isn't wrapped automatically (Artur Jachacy)
 121178 built-in editor wraps text improperly when composing (Carl Hudkins)
 405765 some multiparts aren't grouped properly (Konrad Karl)
 360376 go to next unread-group should be circular (Frederic Crozat)
 406248 make it easier to find previously-read context (Jack Spaar)
 346915 post window's profile list should show email addresses (Artur Jachacy)
 405637 give the save button focus in the save dialog (Chris Petersen)

0.123 "El Nuevo Barretto"
 404515 0.122 build problems in `po' (Pteer)
 404309 0.122 build problems for uint64_t (Geoff)
 404837 newsgroups disappear in 0.121 and 0.122 (Kevin Brammer)
 404183 null pointer in printf (Laurent Bigonville)
 371838 header pane not updated for scores on bytes or lines (Mike)
 370195 uulib/fptools.c assert issue - crash (Samuli Karkkainen)
 404979 in 0.122, `cache' behaves like `read' (Michael Bernstein)
 395318 show `wait' cursor when filtering (Kreao Kunjas)
 404347 indicate offline status more clearly (Samuli Karkkainen)

0.122 "Not Even Wrong"
 354779 pan no longer attempts to reconnect (Jason Auvenshine)
 403513 crash in FC6 when viewing one specific message (Yannick Palanque)
 401012 freed memory read in socket-impl-gio (Charles)
 402121 rare memory corruption when parsing dates in scorefile (Charles)
 403066 getting new groups, conditional jump on uninitialised value (Charles)