@@ -5,6 +5,7 @@
  408778 0.124 bug: signature "command" executed twice (Jack Cuyler)
  408866 0.124 bug: error with the signature delimiter (Mimi Doucet)
  408990 0.124 bug: no more line break at 80 characters (longint)
+ 371868 add common headers to `more headers' in post window (Frederic Crozat)
 
 0.124 "Goblin Worlds"
  370195 0.123 mime decoding errors (Walt)
